Revision history for {{$dist->name}}

{{$NEXT}}
          - update all the $VERSION values, not just the first in each file
          - generate meta provides data from exactly what is in each file

0.091     2015-03-28 04:56:11Z
          - avoid gathering any existing ppport.h, as well as Makefile.PL and
            other files that we regenerate during the build
          - never gather inc/ExtUtils/MakeMaker/Dist/Zilla/Develop.pm

0.090     2015-03-19 06:56:54Z
          - drop annoying -TRIAL suffix on git tag names - tags will now
            always be in the consistent form: v1.234
          - Changes in the release snapshot commit now exactly matches what
            was in the release (without the $NEXT template variable)

0.089     2015-03-06 04:35:28Z
          - ensure correct version of [Test::CleanNamespaces] is used, to ward
            off test failures due to mismatched filenames

0.088     2015-03-05 04:33:03Z
          - fix use of [Test::CheckBreaks] in dist.ini of minted dists
          - add mailing list and irc metadata for minted Test distribution
          - now passing along any payload for [Git::NextVersion] to the
            replacement used by [RewriteVersion::Transitional]
          - added [Test::CleanNamespaces]

0.087     2015-02-20 02:47:43Z
          - now requiring a more conservative minimum version for
            Module::Build::Tiny, when it is used.
          - fix the 'default' minting profile
          - lower the default maximum-allowed minimum perl version in built
            distributions from 5.008001 to 5.006.

0.086     2015-02-01 01:38:17Z
          - no longer scans inc/ for configure_requires minimum perl version
          - generated CONTRIBUTING file now mentions the existence of a TODO
            file in the repository (which is never packaged)
          - dropped the use of "use warnings FATAL => 'all';' in this
            distribution's tests, and in newly-minted distributions