@@ -38,8 +38,7 @@ x_IRC = irc://irc.perl.org/#perl-qa
 x_MailingList = http://lists.perl.org/list/perl-qa.html
 RESOURCES
         : ''
-}}
-{{
+}}{{
     $zilla_plugin || $dist->name =~ /^Moose/ ? <<CHECKBREAKS
 
 [Test::CheckBreaks]
@@ -47,5 +46,4 @@ conflicts_module = Moose::Conflicts
 CHECKBREAKS
     : ''
 }}
-
 ; authordep Pod::Weaver::Section::Contributors = 0.008
